--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/frontend.iml
+/.idea/i18nSettings.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/.gitignore
