--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^29.2.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
