--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@mui/x-data-grid": "^6.6.0",
     "react-hook-form": "^7.30.0",
     "@refinedev/react-router-v6": "^4.1.0",
-    "@refinedev/simple-rest": "^4.0.0"
+    "@refinedev/simple-rest": "^4.0.0",
+    "axios": "^0.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
