--- a/package.json
+++ b/package.json
@@ -3,37 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.85",
+    "@mui/material": "^5.8.6",
+    "@mui/x-data-grid": "^6.6.0",
     "@refinedev/cli": "^2.7.4",
     "@refinedev/core": "^4.28.2",
     "@refinedev/inferencer": "^4.3.2",
     "@refinedev/kbar": "^1.1.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
-    "react-router-dom": "^6.8.1",
     "@refinedev/mui": "^5.0.0",
     "@refinedev/react-hook-form": "^4.1.2",
-    "@mui/icons-material": "^5.8.3",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
-    "@mui/x-data-grid": "^6.6.0",
-    "react-hook-form": "^7.30.0",
     "@refinedev/react-router-v6": "^4.1.0",
     "@refinedev/simple-rest": "^4.0.0",
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "i18next": "^23.4.4",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-xhr-backend": "^3.2.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-i18next": "^13.1.2",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/node": "^12.20.11",
-    "typescript": "^4.7.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^29.2.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^12.20.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
